--- a/web/webPrac/dailyBoxOfficeSearch.html
+++ b/web/webPrac/dailyBoxOfficeSearch.html
@@ -84,17 +84,12 @@
                         <th>영화 제목</th>
                         <th>누적 관객수</th>
                         <th>누적 매출액</th>
-                        <th>개봉일</th>
+                        <th>포스터</th>
+                        <th>포스터 보기</th>
+                        <th>삭제</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td>1,001</td>
-                        <td>Lorem</td>
-                        <td>ipsum</td>
-                        <td>dolor</td>
-                        <td>sit</td>
-                    </tr>
+                    <tbody id = "my_tbody">
                     </tbody>
                 </table>
             </div>
